[DW] serveral gradle improvements